--- a/kubernetes/deploy-julianvmodesto-web.yaml
+++ b/kubernetes/deploy-julianvmodesto-web.yaml
@@ -6,6 +6,11 @@ metadata:
     app: julianvmodesto-web
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
   template:
     metadata:
       labels:
@@ -19,8 +24,6 @@ spec:
         emptyDir: {}
       - name: www
         emptyDir: {}
-      # Bind :80 and :443
-      hostNetwork: true
       containers:
       - name: caddy
         image: julianvmodesto/caddy
@@ -37,15 +40,8 @@ spec:
               name: cloudflare
               key: api_key
         ports:
-        - name: default
-          containerPort: 2015
-          hostPort: 2015
         - name: http
-          containerPort: 80
-          hostPort: 80
-        - name: https
-          containerPort: 443
-          hostPort: 443
+          containerPort: 8080
         volumeMounts:
           # Mount Caddyfile only, not all of /etc
         - name: caddyfile
