--- a/kubernetes/julianvmodesto-web/deploy-julianvmodesto-web.yaml
+++ b/kubernetes/julianvmodesto-web/deploy-julianvmodesto-web.yaml
@@ -16,6 +16,7 @@ spec:
       labels:
         app: julianvmodesto-web
     spec:
+      hostNetwork: true
       volumes:
       - name: caddyfile
         configMap:
@@ -26,7 +27,8 @@ spec:
         imagePullPolicy: Always
         ports:
         - name: http
-          containerPort: 8080
+          containerPort: 80
+          hostPort: 80
         volumeMounts:
           # Mount Caddyfile only, not all of /etc
         - name: caddyfile
