--- a/kubernetes/julianvmodesto-web/deploy-julianvmodesto-web.yaml
+++ b/kubernetes/julianvmodesto-web/deploy-julianvmodesto-web.yaml
@@ -6,11 +6,6 @@ metadata:
     app: julianvmodesto-web
 spec:
   replicas: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
   template:
     metadata:
       labels:
@@ -29,6 +24,16 @@ spec:
         - name: http
           containerPort: 80
           hostPort: 80
+        - name: health
+          containerPort: 8888
+        livenessProbe:
+          httpGet:
+            path: /
+            port: health
+        readinessProbe:
+          httpGet:
+            path: /
+            port: health
         volumeMounts:
           # Mount Caddyfile only, not all of /etc
         - name: caddyfile
