--- a/Caddyfile
+++ b/Caddyfile
@@ -7,6 +7,17 @@
 :{$PORT} {
   root * /site
   file_server
+
+  try_files {path}.html {path}
+
+  redir /blog/categories /blog/categories/
+  redir /blog/page /blog/page/
+  redir /blog/tags /blog/tags/
+  rewrite /blog/categories/* /blog/categories/index.html
+  rewrite /blog/page/* /blog/page/index.html
+  rewrite /blog/tags/* /blog/tags/index.html
+  rewrite /blog/* /blog/index.html
+
   encode zstd gzip
 
   log {
@@ -16,8 +27,7 @@
   @redir_hosts {
     host julianvmodesto.dev www.julianvmodesto.dev julianmodesto.com www.julianmodesto.com julianvmodesto.com
   }
-
-  redir @redir_hosts https://www.julianvmodesto.com
+  redir @redir_hosts https://www.julianvmodesto.com{uri}
 }
 
 :8888 {
