--- a/Caddyfile
+++ b/Caddyfile
@@ -5,10 +5,6 @@
 }
 
 :{$PORT} {
-  rewrite /now /blog/now/index.html
-  rewrite /blog/ /blog
-  rewrite /blog/{path}/ /blog/{path}
-  
   root * /site
   file_server
 
@@ -37,6 +33,8 @@
     host julianvmodesto.dev www.julianvmodesto.dev julianmodesto.com www.julianmodesto.com julianvmodesto.com
   }
   redir @redir_hosts https://www.julianvmodesto.com{uri}
+  
+  rewrite /now /site/blog/now/index.html
 }
 
 :8888 {
